deployment2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
         - name: mysql
           image: mysql:latest
           imagePullPolicy: Always
           ports:
              - containerPort: 3306
                name: db-container
           volumeMounts:
              - mountPath: /var/lib/mysql
                name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
