service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helados-service
spec:
  type: NodePort
  selector:
    app: helados-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
